# LeNet_digit_recognition_app_CPP

./: .gitignore
pretrained/: traced_LeNet_model.pt
src/: CMakeLists.txt  digitprediction.cpp  digitprediction.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scribblearea.cpp  scribblearea.h
